--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,7 +22,22 @@
   </div>
 </div>
 <br>
-
+  <div class="container">
+    {% if posts %}
+    <h2>Articles</h2>
+    {% else %}
+    <h2>No Articles</h2>
+    {% endif %}
+    {% for post in posts %}
+    <div class="card mt-2">
+      <div class="card-body">
+        <h5 class="card-title">{{ post.title }}</a></h5>
+        <p class="card-text">{{ post.content|striptags|slice:':300' }}</p>
+        <a href="{% url 'app:post' id=post.id%}" class="btn btn-outline-secondary">Read more</a>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
   {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'account:login' %}">Log In</a> |
