--- a/templates/post.html
+++ b/templates/post.html
@@ -8,12 +8,12 @@ Post
 
 <div class="container mt-4 mb-4">
       <div class="row">
-            <div class="col-sm-9">
+            <div class="col-sm-8">
                   <h4 class="card-title">{{ post.title }}</a></h4>
                   <div>
                         {{post.category}}&ensp;
                         {{post.date}}&ensp;
-                        Author:&ensp;<a href="{% url 'app:profile' id=post.user.id %}">{{post.user.first_name}}</a>
+                        Author:&ensp;<a href="{% url 'app:profile' id=post.user.id %}">{{post.user}}</a>
                   </div>
                   <br/>
                   <p class="card-text">{{ post.content | safe}}</p><br>
