--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,26 +1,35 @@
 {% extends 'base.html' %}
-{% block title %}Change password{% endblock %}
-{% block body %}
+{% block title %}Change Password{% endblock %}
 
-<div class="container">
-    <div class="m-2 mt-3 mb-5">
-      <form action="" method="POST">
-          <h1>Change Password for {{ user.username|capfirst   }}</h1>
-        {% csrf_token %}
-        <div class="mt-3 mb-3">
-          <label for="password" class="form-label">Current Password</label>
-          <input type="password" name="old_password" class="form-control">
-        </div>
-        <div class="mb-3">
-          <label for="password" class="form-label">New Password</label>
-          <input type="password" name="new_password1" class="form-control">
-        </div>
-        <div class="mb-3">
-            <label for="password" class="form-label">Confirm New Password</label>
-            <input type="password" name="new_password2" class="form-control">
-          </div>
-        <button type="submit" class="btn btn-success">Save</button>
-      </form>
+{% block body %}
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 90vh;">
+    <div class="card p-4 shadow-sm" style="width: 100%; max-width: 500px;">
+        <h4 class="card-title text-center mb-4">Change Password for {{ user.first_name|capfirst }}</h4>
+        <form action="" method="POST">
+            {% csrf_token %}
+            
+            <!-- Current Password Input -->
+            <div class="mb-3">
+                <label for="old_password" class="form-label">Current Password</label>
+                <input type="password" name="old_password" class="form-control form-control-lg" id="old_password" required>
+            </div>
+            
+            <!-- New Password Input -->
+            <div class="mb-3">
+                <label for="new_password1" class="form-label">New Password</label>
+                <input type="password" name="new_password1" class="form-control form-control-lg" id="new_password1" required>
+            </div>
+            
+            <!-- Confirm New Password Input -->
+            <div class="mb-3">
+                <label for="new_password2" class="form-label">Confirm New Password</label>
+                <input type="password" name="new_password2" class="form-control form-control-lg" id="new_password2" required>
+            </div>
+            
+            <!-- Save Button -->
+            <button type="submit" class="btn btn-success w-100">Save</button>
+        </form>
+  
     </div>
-  </div>
+</div>
 {% endblock %}
