--- a/templates/index.html
+++ b/templates/index.html
@@ -6,44 +6,39 @@ Home
 
 {% block body %}
 
-<div class="container">
+<div class="container mt-4">
   <div class="row">
-    <div class="col-sm-9">
-
+    <!-- Main Content Area -->
+    <div class="col-lg-9">
       {% for p in posts %}
-        <div class="card mt-2">
+        <div class="card shadow-sm mb-4">
           <div class="card-body">
-            <h5 class="card-title">{{ p.title }}</a></h5>
-            <p class="card-text">{{ p.content|striptags|slice:':300' }}</p>
-            <a href="{% url 'app:post' id=p.id%}" class="btn btn-outline-primary">Read more</a>
+            <h5 class="card-title">{{ p.title }}</h5>
+            <p class="card-text text-muted">{{ p.content|striptags|slice:':300'|safe }}...</p>
+            <a href="{% url 'app:post' id=p.id %}" class="btn btn-primary btn-sm">Read more</a>
           </div>
         </div>
       {% endfor %}
     </div>
-    <div class="col-sm-3">
-      {% if user.is_authenticated %}
-      <div class="card mt-2">
-        <div class="card-body">
-          <strong>Full Name: </strong>{{ user.first_name }} {{ user.last_name }}<br>
-          <strong>Username: </strong>{{ user.username }}<br>
-          <strong>User ID: </strong>{{ user.id }}<br>
-          <strong>Email: </strong>{{ user.email }}<br><br>
-          <a href="{% url 'app:profile' id=user.id %}" class="btn btn-outline-secondary">Profile</a>
+
+    <!-- Sidebar -->
+    <div class="col-lg-3">
+
+      <!-- Categories Section -->
+      <div class="card shadow-sm mb-2">
+        <div class="card-header bg-primary text-white">
+          Categories
         </div>
+        <ul class="list-group list-group-flush">
+          {% for cat in cat %}
+            <a href="/category/{{ cat.title }}" class="list-group-item list-group-item-action text-primary">
+              {{ cat.title }}
+            </a>
+          {% endfor %}
+        </ul>
       </div>
-      {% endif %}
-        <div class="card mt-2 mb-3">
-          <div class="card-header">
-            Categories
-          </div>
-          <ul class="list-group list-group-flush">
-            {% for cat in cat %} 
-            <a href="/category/{{cat.title}}" class="list-group-item">{{cat.title}}</a>
-            {% endfor %} 
-          </ul>
-        </div>
     </div>
-  </div>   
+  </div>
 </div>
 
 {% endblock %}
