--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,41 +1,37 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="{% url 'app:index' %}">Blog.io</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary py-2">
+  <div class="container">
+      <a class="navbar-brand" href="{% url 'app:index' %}">Blogpost</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">      
-          {% if user.is_authenticated %}
-            {% if user.is_superuser %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
-            </li>
-            {% endif %}
-            <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="{% url 'app:profile' id=user.id %}">Profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'app:addpost' %}">Add Post</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'app:contact' %}">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'app:logout' %}">Logout</a>
-            </li>
-          {% else %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'account:login' %}">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'account:register' %}">Register</a>
-          </li>
-          {% endif %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'app:api' %}">API</a>
-          </li>
-        </ul>
+          <ul class="navbar-nav ms-auto">
+              {% if user.is_authenticated %}
+                  {% if user.is_superuser %}
+                  <li class="nav-item">
+                      <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+                  </li>
+                  {% endif %}
+                  <li class="nav-item dropdown">
+                      <a class="nav-link active dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Account
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="userDropdown">
+                          <li><a class="dropdown-item" href="{% url 'app:profile' id=user.id %}">Profile</a></li>
+                          <li><a class="dropdown-item" href="{% url 'app:addpost' %}">Add Post</a></li>
+                          <li><a class="dropdown-item" href="{% url 'app:contact' %}">Feedback</a></li>
+                          <li><a class="dropdown-item" href="{% url 'app:logout' %}">Logout</a></li>
+                      </ul>
+                  </li>
+              {% else %}
+                  <li class="nav-item">
+                      <a class="nav-link" href="{% url 'account:login' %}">Login</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="{% url 'account:register' %}">Register</a>
+                  </li>
+              {% endif %}
+          </ul>
       </div>
-    </div>
-  </nav>
+  </div>
+</nav>
